# yandex-disk-quette

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-appimage.yml  ci-fedora.yml
docs/: web-experiment-react-migration-plan.md  web-experiment-react-status.md
scripts/: obfuscate_oauth.py
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app_resources.qrc  cloud_path_util.hpp  composition_root.cpp  composition_root.hpp  json_config.cpp  json_config.hpp  main.cpp  main_content.ui  main_content_widget.cpp  main_content_widget.hpp  main_window.cpp  main_window.hpp  oauth_credentials.hpp  settings_dialog.cpp  settings_dialog.hpp  settings_dialog.ui  web_experiment_bridge.cpp  web_experiment_bridge.hpp  web_experiment_page.cpp  web_experiment_page.hpp  web_experiment_react.qrc  web_experiment_window.cpp  web_experiment_window.hpp
src/app/i18n/: y_disquette_ru.ts
src/app/web_experiment/: contents.js  index.html  input.css  package-lock.json  package.json  settings.js  status.js  styles.css  tailwind.config.js  tree.js
src/app/web_experiment_react/: index.html  package-lock.json  package.json  vite.config.ts
src/app/web_experiment_react/src/: App.tsx  index.css
src/app/web_experiment_react/src/components/: BreadcrumbsBar.tsx  Contents.tsx  Layout.tsx  MenuBar.tsx  NavPanel.tsx  SettingsPanel.tsx  StatusBar.tsx  ThemeToggle.tsx  Tree.tsx
src/app/web_experiment_react/src/contexts/: BridgeContext.tsx
src/app/web_experiment_react/src/lib/: bridge-types.ts  format.ts
src/app/web_experiment_react/src/store/: useStore.ts
src/auth/application/: itoken_provider.hpp
src/auth/infrastructure/: oauth_callback_scheme_handler.cpp  oauth_callback_scheme_handler.hpp  oauth_client.cpp  oauth_client.hpp  ssl_ignoring_network_access_manager.cpp  ssl_ignoring_network_access_manager.hpp  token_holder.hpp  token_store.cpp  token_store.hpp  yandex_disk_api_client.cpp  yandex_disk_api_client.hpp  yandex_disk_path.hpp
src/auth/ui/: login_widget.cpp  login_widget.hpp  login_widget.ui
src/disk_tree/application/: get_quota_use_case.hpp  iquota_service.hpp  itree_repository.hpp  load_tree_use_case.hpp
src/disk_tree/domain/: node.hpp  quota.hpp
src/disk_tree/infrastructure/: api_parse.cpp  api_parse.hpp  api_quota_service.cpp  api_quota_service.hpp  api_tree_repository.cpp  api_tree_repository.hpp  mock_quota_service.hpp  mock_tree_repository.cpp  mock_tree_repository.hpp
src/settings/application/: get_settings_use_case.hpp  iselected_nodes_store.hpp  isettings_store.hpp  save_settings_use_case.hpp  toggle_node_selection_use_case.hpp
src/settings/domain/: app_settings.hpp
src/settings/infrastructure/: mock_selected_nodes_store.hpp  mock_settings_store.hpp
src/shared/: app_log.cpp  app_log.hpp  cloud_path_util.hpp
src/sync/application/: delete_resource_use_case.hpp  download_file_use_case.hpp  ipoll_run_repository.hpp  isync_service.hpp  scan_and_fill_index_use_case.cpp  scan_and_fill_index_use_case.hpp  sync_cloud_to_local_use_case.cpp  sync_cloud_to_local_use_case.hpp  sync_local_to_cloud_use_case.cpp  sync_local_to_cloud_use_case.hpp  sync_path_mapper.cpp  sync_path_mapper.hpp  to_delete_batches.cpp  to_delete_batches.hpp
src/sync/domain/: cloud_datetime.cpp  cloud_datetime.hpp  cloud_local_compare.cpp  cloud_local_compare.hpp  last_uploaded_item.hpp  poll_run.hpp  sync_file_status.hpp  sync_status.hpp  trash_item.hpp
src/sync/infrastructure/: disk_resource_client.cpp  disk_resource_client.hpp  last_uploaded_parser.cpp  last_uploaded_parser.hpp  mock_sync_service.hpp  poll_service.cpp  poll_service.hpp  poll_worker.cpp  poll_worker.hpp  sqlite_poll_run_repository.cpp  sqlite_poll_run_repository.hpp  sync_index.cpp  sync_index.hpp  sync_infrastructure_factory.cpp  sync_infrastructure_factory.hpp  sync_service.cpp  sync_service.hpp  sync_worker.cpp  sync_worker.hpp  trash_parser.cpp  trash_parser.hpp
tests/: CMakeLists.txt  api_parse_test.cpp  cloud_path_util_test.cpp  domain_test.cpp  json_config_test.cpp  last_uploaded_parser_test.cpp  poll_run_repository_test.cpp  smoke_test.cpp  sync_index_test.cpp  sync_path_mapper_test.cpp  to_delete_batches_test.cpp  use_case_test.cpp
