add_library(y_disquette_core STATIC
  shared/app_log.hpp
  shared/app_log.cpp
  auth/application/itoken_provider.hpp
  auth/infrastructure/token_store.hpp
  auth/infrastructure/token_store.cpp
  auth/infrastructure/oauth_client.hpp
  auth/infrastructure/oauth_client.cpp
  auth/infrastructure/ssl_ignoring_network_access_manager.hpp
  auth/infrastructure/ssl_ignoring_network_access_manager.cpp
  auth/infrastructure/yandex_disk_api_client.hpp
  auth/infrastructure/yandex_disk_api_client.cpp
  disk_tree/domain/node.hpp
  disk_tree/domain/quota.hpp
  disk_tree/application/itree_repository.hpp
  disk_tree/application/iquota_service.hpp
  disk_tree/application/load_tree_use_case.hpp
  disk_tree/application/get_quota_use_case.hpp
  disk_tree/infrastructure/mock_tree_repository.hpp
  disk_tree/infrastructure/mock_tree_repository.cpp
  disk_tree/infrastructure/mock_quota_service.hpp
  disk_tree/infrastructure/api_tree_repository.hpp
  disk_tree/infrastructure/api_tree_repository.cpp
  disk_tree/infrastructure/api_quota_service.hpp
  disk_tree/infrastructure/api_quota_service.cpp
  disk_tree/infrastructure/api_parse.hpp
  disk_tree/infrastructure/api_parse.cpp
  sync/domain/sync_status.hpp
  sync/domain/poll_run.hpp
  sync/domain/last_uploaded_item.hpp
  sync/domain/trash_item.hpp
  sync/domain/cloud_datetime.hpp
  sync/domain/cloud_datetime.cpp
  sync/domain/cloud_local_compare.hpp
  sync/domain/cloud_local_compare.cpp
  sync/application/isync_service.hpp
  sync/application/ipoll_run_repository.hpp
  sync/application/to_delete_batches.hpp
  sync/application/to_delete_batches.cpp
  sync/application/sync_path_mapper.hpp
  sync/application/sync_path_mapper.cpp
  sync/application/scan_and_fill_index_use_case.hpp
  sync/application/scan_and_fill_index_use_case.cpp
  sync/application/sync_cloud_to_local_use_case.hpp
  sync/application/sync_cloud_to_local_use_case.cpp
  sync/application/sync_local_to_cloud_use_case.hpp
  sync/application/sync_local_to_cloud_use_case.cpp
  sync/infrastructure/sync_worker.hpp
  sync/infrastructure/sync_worker.cpp
  sync/infrastructure/poll_worker.hpp
  sync/infrastructure/poll_worker.cpp
  sync/infrastructure/poll_service.hpp
  sync/infrastructure/poll_service.cpp
  sync/infrastructure/sync_service.hpp
  sync/infrastructure/sync_service.cpp
  sync/infrastructure/sync_index.hpp
  sync/infrastructure/sync_index.cpp
  sync/infrastructure/sqlite_poll_run_repository.hpp
  sync/infrastructure/sqlite_poll_run_repository.cpp
  sync/infrastructure/last_uploaded_parser.hpp
  sync/infrastructure/last_uploaded_parser.cpp
  sync/infrastructure/trash_parser.hpp
  sync/infrastructure/trash_parser.cpp
  sync/infrastructure/disk_resource_client.hpp
  sync/infrastructure/disk_resource_client.cpp
  sync/infrastructure/sync_infrastructure_factory.hpp
  sync/infrastructure/sync_infrastructure_factory.cpp
  settings/domain/app_settings.hpp
  settings/application/isettings_store.hpp
  settings/application/iselected_nodes_store.hpp
  settings/application/get_settings_use_case.hpp
  settings/application/save_settings_use_case.hpp
  settings/application/toggle_node_selection_use_case.hpp
  settings/infrastructure/mock_settings_store.hpp
  settings/infrastructure/mock_selected_nodes_store.hpp
)
target_include_directories(y_disquette_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(y_disquette_core PUBLIC Qt6::Core Qt6::Network Qt6::Sql)
add_subdirectory(app)
